Stable version, GUI features complete Needs to change Threads and make it a little beautifull